--- a/docs/wkline.5
+++ b/docs/wkline.5
@@ -1,14 +1,18 @@
-.TH WKLINE 5 "March 2014" "beta" "Configuration Files"
-.SH NAME
+.TH "wkline" 5 "March 2014" "beta" "Configuration Files"
+
+.SH "NAME"
 config.json \- configuration file for customizing wkline
-.SH DESCRIPTION
+
+.SH "DESCRIPTION"
 .B config.json
 is a JSON file that defines the theme, enabled widgets and widget options for wkline.
 
 TODO
-.SH EXAMPLES
+
+.SH "EXAMPLES"
 TODO
-.SH FILES
+
+.SH "FILES"
 .I /etc/xdg/wkline/config.json
 .RS
 System-wide configuration file.
@@ -16,7 +20,9 @@ System-wide configuration file.
 .I ~/.config/wkline/config.json
 .RS
 Per-user configuration file.
-.SH AUTHOR
+
+.SH "AUTHOR"
 Kim Silkebækken <kim.silkebaekken@gmail.com>
+
 .SH "SEE ALSO"
 .BR wkline (1)
