docs: add info about config env var

--- a/docs/wkline.1
+++ b/docs/wkline.1
@@ -65,6 +65,10 @@ Per-user configuration file. See
 .BR wkline (5)
 for further details.
 
+.SH "ENVIRONMENT"
+.IP WKLINE_CONFIG_PATH
+Full path of an alternate \fIconfig.json\fP. The file must exist and be valid JSON.
+
 .SH "ISSUES"
 See the issue tracker at
 .I https://github.com/Lokaltog/wkline/issues
