--- a/docs/wkline.5
+++ b/docs/wkline.5
@@ -21,6 +21,10 @@ System-wide configuration file.
 .RS
 Per-user configuration file.
 
+.SH "ENVIRONMENT"
+.IP WKLINE_CONFIG_PATH
+Full path of an alternate \fIconfig.json\fP. The file must exist and be valid JSON.
+
 .SH "AUTHOR"
 Kim Silkebækken <kim.silkebaekken@gmail.com>
 
