main: use "screen" instead of "monitor" to be consistent

--- a/docs/wkline.1
+++ b/docs/wkline.1
@@ -6,8 +6,8 @@ wkline \- WebKit-based statusline for tiling window managers
 .SH "SYNOPSIS"
 .B wkline [-h
 .I height
-.B ] [-m
-.I monitor
+.B ] [-s
+.I screen
 .B ] [-p
 .I position
 .B ] [-t
@@ -24,8 +24,8 @@ blurred background without a desktop compositor running.
 .SH "OPTIONS"
 .IP "-h height"
 Set the height of the statusline in pixels.
-.IP "-m monitor"
-Define which monitor the statusline appears on.
+.IP "-s screen"
+Define which screen the statusline appears on.
 .IP "-p position"
 Set the statusline position. Valid options are \fItop\fP and \fIbottom\fP.
 .IP "-t theme-uri"
