--- a/docs/wkline.1
+++ b/docs/wkline.1
@@ -8,10 +8,10 @@ wkline \- WebKit-based statusline for tiling window managers
 .I config-file
 .B ] [-h
 .I height
+.B ] [-m
+.I monitor
 .B ] [-p
 .I position
-.B ] [-s
-.I screen
 .B ] [-t
 .I theme-uri
 .B ]
@@ -30,10 +30,10 @@ overrides \fIWKLINE_CONFIG_PATH\fP and any system-wide and per-user configuratio
 files. The file must exist and be valid JSON.
 .IP "-h height"
 Set the height of the statusline in pixels.
+.IP "-m monitor"
+Define which monitor the statusline appears on.
 .IP "-p position"
 Set the statusline position. Valid options are \fItop\fP and \fIbottom\fP.
-.IP "-s screen"
-Define which screen the statusline appears on.
 .IP "-t theme-uri"
 Set the URI for a theme HTML file. Must be a valid URI, i.e. local files must be
 prefixed with \fIfile://\fP.
