Update project description

--- a/docs/wkline.1
+++ b/docs/wkline.1
@@ -18,10 +18,9 @@ wkline \- WebKit-based statusline for tiling window managers
 
 .SH "DESCRIPTION"
 .B wkline
-is a statusline plugin that launches a plain GTK window with a WebKit WebView
-pointing to a static HTML file containing the statusline. It provides a smooth
-looking statusline with CSS transitions and effects and the possibility of having a
-blurred background without a desktop compositor running.
+displays a HTML-based statusline in a WebKit web view. It provides a smooth looking
+statusline with CSS transitions and effects, and the possibility of having a
+transparent background with effects without a desktop compositor running.
 
 .SH "OPTIONS"
 .IP "-c config-file"
