--- a/docs/wkline.5
+++ b/docs/wkline.5
@@ -1,32 +1,62 @@
-.TH "wkline" 5 "March 2014" "beta" "Configuration Files"
-
+'\" t
+.\"     Title: wkline
+.\"    Author: [see the "Authors" section]
+.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
+.\"      Date: 03/19/2014
+.\"    Manual: Wkline Manual
+.\"    Source: wkline
+.\"  Language: English
+.\"
+.TH "WKLINE" "5" "03/19/2014" "wkline" "Wkline Manual"
+.\" -----------------------------------------------------------------
+.\" * Define some portability stuff
+.\" -----------------------------------------------------------------
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.\" http://bugs.debian.org/507673
+.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
+.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.ie \n(.g .ds Aq \(aq
+.el       .ds Aq '
+.\" -----------------------------------------------------------------
+.\" * set default formatting
+.\" -----------------------------------------------------------------
+.\" disable hyphenation
+.nh
+.\" disable justification (adjust text to left margin only)
+.ad l
+.\" -----------------------------------------------------------------
+.\" * MAIN CONTENT STARTS HERE *
+.\" -----------------------------------------------------------------
 .SH "NAME"
-config.json \- configuration file for customizing wkline
-
+wkline \- configuration file for customizing wkline
+.SH "SYNOPSIS"
+.sp
+\fI~/\&.config/wkline/config\&.json\fR
+.sp
+\fI/etc/xdg/wkline/config\&.json\fR
 .SH "DESCRIPTION"
-.B config.json
-is a JSON file that defines the theme, enabled widgets and widget options for wkline.
-
-TODO
-
-.SH "EXAMPLES"
-TODO
-
+.sp
+\fBconfig\&.json\fR is a JSON file that defines the appearance, enabled widgets and widget options for \fBwkline\fR(1)\&.
+.sp
+[TODO] add widgets and config options
 .SH "FILES"
-.I /etc/xdg/wkline/config.json
-.RS
-System-wide configuration file.
+.PP
+\fI~/\&.config/wkline/config\&.json\fR
+.RS 4
+Per\-user configuration file\&. See
+\fBwkline\fR(5) for further details\&.
 .RE
-.I ~/.config/wkline/config.json
-.RS
-Per-user configuration file.
-
-.SH "ENVIRONMENT"
-.IP WKLINE_CONFIG_PATH
-Full path of an alternate \fIconfig.json\fP. The file must exist and be valid JSON.
-
-.SH "AUTHOR"
-Kim Silkebækken <kim.silkebaekken@gmail.com>
-
+.PP
+\fI/etc/xdg/wkline/config\&.json\fR
+.RS 4
+System\-wide configuration file\&. See
+\fBwkline\fR(5) for further details\&.
+.RE
+.SH "AUTHORS"
+.sp
+Kim Silkebækken <kim\&.silkebaekken@gmail\&.com>
+.sp
+See https://github\&.com/Lokaltog/wkline/graphs/contributors for a list of all contributors\&.
 .SH "SEE ALSO"
-.BR wkline (1)
+.sp
+\fBwkline\fR(1)
