--- a/docs/wkline.5
+++ b/docs/wkline.5
@@ -2,12 +2,12 @@
 .\"     Title: wkline
 .\"    Author: [see the "Authors" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 03/19/2014
+.\"      Date: 03/20/2014
 .\"    Manual: Wkline Manual
 .\"    Source: wkline
 .\"  Language: English
 .\"
-.TH "WKLINE" "5" "03/19/2014" "wkline" "Wkline Manual"
+.TH "WKLINE" "5" "03/20/2014" "wkline" "Wkline Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -37,8 +37,199 @@ wkline \- configuration file for customizing wkline
 .SH "DESCRIPTION"
 .sp
 \fBconfig\&.json\fR is a JSON file that defines the appearance, enabled widgets and widget options for \fBwkline\fR(1)\&.
+.SS "Widgets"
 .sp
-[TODO] add widgets and config options
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
+.ps +1
+\fBbattery\fR
+.RS 4
+.PP
+\fIname\fR
+.RS 4
+UPower name for the battery device (default: BAT0)
+.RE
+.PP
+\fIrefresh_interval\fR
+.RS 4
+How quickly to check level in seconds (default: 20)
+.RE
+.RE
+.sp
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
+.ps +1
+\fBdatetime\fR
+.RS 4
+.PP
+\fIdate_format\fR
+.RS 4
+Date format (default: "%Y\-%m\-%d")
+.RE
+.PP
+\fItime_format\fR
+.RS 4
+Time format (default: "%H:%M:%S")
+.RE
+.PP
+\fIrefresh_interval\fR
+.RS 4
+How quickly to refresh in seconds (default: 1)
+.RE
+.RE
+.sp
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
+.ps +1
+\fBemail_imap\fR
+.RS 4
+.PP
+\fIaddress\fR
+.RS 4
+URL of IMAP server (default: "imaps://imap\&.gmail\&.com:993/INBOX")
+.RE
+.PP
+\fIusername\fR
+.RS 4
+Username to log in (default: none)
+.RE
+.PP
+\fIpassword\fR
+.RS 4
+Password to use (default: none)
+.RE
+.PP
+\fIssl_verify\fR
+.RS 4
+Use certificate verification (default: true)
+.RE
+.PP
+\fIrefresh_interval\fR
+.RS 4
+How often to check for new mail in seconds (default: 60)
+.RE
+.RE
+.sp
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
+.ps +1
+\fBexternal_ip\fR
+.RS 4
+.PP
+\fIaddress\fR
+.RS 4
+URL to query data (default: "http://ipv4\&.icanhazip\&.com/")
+.RE
+.PP
+\fIrefresh_interval\fR
+.RS 4
+How often to check address in seconds (default: 3600)
+.RE
+.RE
+.sp
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
+.ps +1
+\fBmagick_background\fR
+.RS 4
+.PP
+\fIblur_radius\fR
+.RS 4
+How much blurring to apply (default: 0)
+.RE
+.PP
+\fIbrightness\fR
+.RS 4
+Brightness level (default: 100)
+.RE
+.PP
+\fIsaturation\fR
+.RS 4
+Saturation level (default: 100)
+.RE
+.RE
+.sp
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
+.ps +1
+\fBnow_playing_mpd\fR
+.RS 4
+.PP
+\fIhost\fR
+.RS 4
+Hostname of mpd server (default: "localhost")
+.RE
+.PP
+\fIport\fR
+.RS 4
+Port of the server (default: "6600")
+.RE
+.PP
+\fItimeout\fR
+.RS 4
+How to attempt connecting in ms (default: "5000")
+.RE
+.PP
+\fIupdate_interval\fR
+.RS 4
+How often to update in ms (default: "1000")
+.RE
+.RE
+.sp
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
+.ps +1
+\fBvolume\fR
+.RS 4
+.PP
+\fIcard\fR
+.RS 4
+ALSA sound card to use (default: "default")
+.RE
+.PP
+\fIselem\fR
+.RS 4
+Which ALSA control to adjust (default: "Master")
+.RE
+.RE
+.sp
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
+.ps +1
+\fBweather\fR
+.RS 4
+.PP
+\fIlocation\fR
+.RS 4
+ZIP code of requested location (default: none)
+.RE
+.PP
+\fIunit\fR
+.RS 4
+Farenheit or Centigrade (default: "c")
+.RE
+.PP
+\fIrefresh_interval\fR
+.RS 4
+How often to check for updates in s (default: "1800")
+.RE
+.RE
 .SH "FILES"
 .PP
 \fI~/\&.config/wkline/config\&.json\fR
