--- a/docs/wkline.5.asciidoc
+++ b/docs/wkline.5.asciidoc
@@ -23,56 +23,111 @@ Description
 *config.json* is a JSON file that defines the appearance, enabled widgets and widget
 options for *wkline*(1).
 
-Widgets
-~~~~~~~
+Configurable Widget Options
+~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Defaults
+^^^^^^^^
+'battery'::
+[horizontal]
+    name;; BAT0
+    refresh_interval;; 20
+
+'datetime'::
+[horizontal]
+    date_format;; "%Y-%m-%d"
+    time_format;; "%H:%M:%S"
+    refresh_interval;; 1
+
+'email_imap'::
+[horizontal]
+    address;; imaps://imap.gmail.com:993/INBOX
+    username;; blank
+    password;; blank
+    ssl_verify;; true
+    refresh_interval;; 60
+
+'external_ip'::
+[horizontal]
+    address;; http://ipv4.icanhazip.com
+    refresh_interval;; 3600
+
+'magick_background'::
+[horizontal]
+    blur_radius;; 0
+    brightness;; 100
+    saturation;; 100
+
+'now_playing_mpd'::
+[horizontal]
+    host;; localhost
+    port;; 6600
+    timeout;; 5000
+    update_interval;; 1000
+
+'volume'::
+[horizontal]
+    card;; default
+    selem;; Master
+
+'weather'::
+[horizontal]
+    location;; blank
+    unit;; c
+    refresh_interval;; 1800
 
 battery
 ^^^^^^^
+[horizontal]
 'name'::
-    UPower name for the battery device (default: BAT0)
+    UPower name for the battery device
 'refresh_interval'::
-    How quickly to check level in seconds (default: 20)
+    How quickly to check level in seconds
 
 datetime
 ^^^^^^^^
+[horizontal]
 'date_format'::
-    Date format (default: "%Y-%m-%d")
+    Date format. %Y, %m, %d are variables 
 'time_format'::
-    Time format (default: "%H:%M:%S")
+    Time format. %H, %M, %S are variables
 'refresh_interval'::
-    How quickly to refresh in seconds (default: 1)
+    How quickly to refresh in seconds
 
 email_imap
 ^^^^^^^^^^
+[horizontal]
 'address'::
-    URL of IMAP server (default: "imaps://imap.gmail.com:993/INBOX")
+    URL of IMAP server
 'username'::
-    Username to log in (default: none)
+    Username to authenticate
 'password'::
-    Password to use (default: none)
+    Password to authenticate
 'ssl_verify'::
-    Use certificate verification (default: true)
+    Use HTTPS certificate verification
 'refresh_interval'::
-    How often to check for new mail in seconds (default: 60)
+    How often to check for new mail in seconds
 
 external_ip
 ^^^^^^^^^^^
+[horizontal]
 'address'::
-    URL to query data (default: "http://ipv4.icanhazip.com/")
+    URL to query for IP address
 'refresh_interval'::
-    How often to check address in seconds (default: 3600)
+    How often to check address in seconds
 
 magick_background
 ^^^^^^^^^^^^^^^^^
+[horizontal]
 'blur_radius'::
-    How much blurring to apply (default: 0)
+    How much blurring to apply
 'brightness'::
-    Brightness level (default: 100)
+    Brightness level
 'saturation'::
-    Saturation level (default: 100)
+    Saturation level
 
 now_playing_mpd
 ^^^^^^^^^^^^^^^
+[horizontal]
 'host'::
     Hostname of mpd server (default: "localhost")
 'port'::
@@ -84,6 +139,7 @@ now_playing_mpd
 
 volume
 ^^^^^^
+[horizontal]
 'card'::
     ALSA sound card to use (default: "default")
 'selem'::
@@ -91,6 +147,7 @@ volume
 
 weather
 ^^^^^^^
+[horizontal]
 'location'::
     ZIP code of requested location (default: none)
 'unit'::
