forgot to rm in line defaults

--- a/docs/wkline.5
+++ b/docs/wkline.5
@@ -459,28 +459,28 @@ T{
 \fIhost\fR
 T}:T{
 .sp
-Hostname of mpd server (default: "localhost")
+Hostname of mpd server
 T}
 T{
 .sp
 \fIport\fR
 T}:T{
 .sp
-Port of the server (default: "6600")
+Port of the server
 T}
 T{
 .sp
 \fItimeout\fR
 T}:T{
 .sp
-How to attempt connecting in ms (default: "5000")
+How to attempt connecting in ms
 T}
 T{
 .sp
 \fIupdate_interval\fR
 T}:T{
 .sp
-How often to update in ms (default: "1000")
+How often to update in ms
 T}
 .TE
 .sp 1
@@ -502,14 +502,14 @@ T{
 \fIcard\fR
 T}:T{
 .sp
-ALSA sound card to use (default: "default")
+ALSA sound card to use
 T}
 T{
 .sp
 \fIselem\fR
 T}:T{
 .sp
-Which ALSA control to adjust (default: "Master")
+Which ALSA control to adjust
 T}
 .TE
 .sp 1
@@ -532,21 +532,21 @@ T{
 \fIlocation\fR
 T}:T{
 .sp
-ZIP code of requested location (default: none)
+ZIP code of requested location
 T}
 T{
 .sp
 \fIunit\fR
 T}:T{
 .sp
-Farenheit or Centigrade (default: "c")
+Farenheit or Centigrade, c or f
 T}
 T{
 .sp
 \fIrefresh_interval\fR
 T}:T{
 .sp
-How often to check for updates in s (default: "1800")
+How often to check for updates in seconds
 T}
 .TE
 .sp 1
