--- a/docs/wkline.5.asciidoc
+++ b/docs/wkline.5.asciidoc
@@ -129,31 +129,31 @@ now_playing_mpd
 ^^^^^^^^^^^^^^^
 [horizontal]
 'host'::
-    Hostname of mpd server (default: "localhost")
+    Hostname of mpd server
 'port'::
-    Port of the server (default: "6600")
+    Port of the server
 'timeout'::
-    How to attempt connecting in ms (default: "5000")
+    How to attempt connecting in ms
 'update_interval'::
-    How often to update in ms (default: "1000")
+    How often to update in ms
 
 volume
 ^^^^^^
 [horizontal]
 'card'::
-    ALSA sound card to use (default: "default")
+    ALSA sound card to use
 'selem'::
-    Which ALSA control to adjust (default: "Master")
+    Which ALSA control to adjust
 
 weather
 ^^^^^^^
 [horizontal]
 'location'::
-    ZIP code of requested location (default: none)
+    ZIP code of requested location
 'unit'::
-    Farenheit or Centigrade (default: "c")
+    Farenheit or Centigrade, c or f
 'refresh_interval'::
-    How often to check for updates in s (default: "1800")
+    How often to check for updates in seconds
 
 Files
 -----
