--- a/docs/wkline.5.asciidoc
+++ b/docs/wkline.5.asciidoc
@@ -25,37 +25,20 @@ options for *wkline*(1).
 
 Configurable Widget Options
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Defaults
-^^^^^^^^
-'now_playing_mpd'::
-[horizontal]
-    host;; localhost
-    port;; 6600
-    timeout;; 5000
-    update_interval;; 1000
-
-'volume'::
-[horizontal]
-    card;; default
-    selem;; Master
-
-'weather'::
-[horizontal]
-    location;; blank
-    unit;; c
-    refresh_interval;; 1800
-
 battery
 ^^^^^^^
 'name'::
     UPower name for the battery device
 
+default: BAT0
+
 'refresh_interval'::
     How quickly to check level in seconds
 
+default: 20
+
 datetime
 ^^^^^^^^
-[horizontal]
 'date_format'::
     Date format. %Y, %m, %d are variables
 
@@ -63,82 +46,120 @@ default: "%Y-%m-%d"
 
 'time_format'::
     Time format. %H, %M, %S are variables
+
 default: "%H:%M:%S"
+
 'refresh_interval'::
     How quickly to refresh in seconds
+
 default: 1
 
 email_imap
 ^^^^^^^^^^
-[horizontal]
 'address'::
     URL of IMAP server
+
 default: imaps://imap.gmail.com:993/INBOX
+
 'username'::
     Username to authenticate
+
 default: none
+
 'password'::
     Password to authenticate
+
 default: none
+
 'ssl_verify'::
     Use HTTPS certificate verification
+
 default: true
+
 'refresh_interval'::
     How often to check for new mail in seconds
+
 default: 60
 
 external_ip
 ^^^^^^^^^^^
-[horizontal]
 'address'::
     URL to query for IP address
+
 default: http://ipv4.icanhazip.com 
+
 'refresh_interval'::
     How often to check address in seconds
+
 default: 3600
 
 magick_background
 ^^^^^^^^^^^^^^^^^
-[horizontal]
 'blur_radius'::
     How much blurring to apply
+
 default: 0
+
 'brightness'::
     Brightness level
+
 default: 100
+
 'saturation'::
     Saturation level
+
 default: 100
 
 now_playing_mpd
 ^^^^^^^^^^^^^^^
-[horizontal]
 'host'::
     Hostname of mpd server
+
+default: localhost
+
 'port'::
     Port of the server
+
+default: 6600
+
 'timeout'::
     How to attempt connecting in ms
+
+default: 5000
+
 'update_interval'::
     How often to update in ms
 
+default: 1000
+
 volume
 ^^^^^^
-[horizontal]
 'card'::
     ALSA sound card to use
+
+default: default
+
 'selem'::
     Which ALSA control to adjust
 
+default: Master
+
 weather
 ^^^^^^^
-[horizontal]
 'location'::
     ZIP code of requested location
+
+default: none
+
 'unit'::
     Farenheit or Centigrade, c or f
+
+default: c
+
 'refresh_interval'::
     How often to check for updates in seconds
+
+default: 1800
 
 Files
 -----
